# sales-prediction

./: .gitignore  README.md  app.py  best_params.json  config.py  pyproject.toml  setup.py
artifacts/: best_model.pkl  correlated_features.pkl  correlation_matrix.pkl  data_transformation.pkl  feature_importance.pkl  model.pkl
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: exploration.ipynb
pipelines/: predict_pipeline.py
src/: exception.py  logger.py  utils.py
src/components/: data_encoding.py  data_ingestion.py  data_transformation.py  feature_selection.py  model_trainer.py
templates/: home.html  index.html
tests/: test_data_encoding.py  test_data_imputation.py  test_data_transformation.py  test_extract_features.py  test_feature_selection.py
